[package]
name = "fakeroot"
version = "0.3.0"
edition = "2021"
description = "A lightweight and batteries-included status_command for i3 and sway"
license = "GPL-3.0-only"
homepage = "https://github.com/acheronfail/istat"
repository = "https://github.com/acheronfail/istat"
keywords = ["i3", "sway", "status_command", "istat", "status"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "fakeroot"
path = "src/lib.rs"
crate_type = ["dylib"]

[dependencies]
libc = "0.2.146"
redhook = "2.0.0"
